--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -47,177 +47,179 @@
     &__svg {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
+
+        &__title {
+            font-weight: 700;
+            font-size: 20px;
+            line-height: 1.15;
+            text-align: center;
+            letter-spacing: 0.03em;
+            color: var(--text-dark);
+            margin-bottom: 12px;
+        }
+    
+        &__lable {
+            font-weight: 400;
+            font-size: 12px;
+            line-height: 1.17;
+            letter-spacing: 0.01em;
+            color: var(--text-second-color);
+    
+        }
+    
+        &__field:not(:first-child) {
+            margin-top: 10px;
+        }
+    
+        &__wrap {
+            position: relative;
+        }
+    
+        &__icon {
+            position: absolute;
+            left: 12px;
+            top: 50%;
+            transform: translateY(-50%);
+            transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+    
+        &__input {
+            width: 100%;
+            height: 40px;
+            border: 1px solid rgba(33, 33, 33, 0.2);
+            border-radius: 4px;
+            padding-left: 42px;
+            outline: transparent;
+            transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+            margin-top: 4px;
+    
+            &:focus {
+                border-color: var(--accent-color);
+            }
+    
+            &:focus+.modal__icon {
+                fill: var(--accent-color);
+            }
+        }
+    
+        &__comment {
+            margin-top: 10px;
+            margin-bottom: 20px;
+        }
+    
+        &__input-comment {
+            width: 100%;
+            height: 120px;
+            border: 1px solid rgba(33, 33, 33, 0.2);
+            border-radius: 4px;
+            resize: none;
+            padding: 16px 12px;
+            outline: transparent;
+            transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+            margin-top: 4px;
+    
+            &:focus {
+                border-color: var(--accent-color);
+            }
+    
+            &::placeholder {
+                font-weight: 400;
+                font-size: 12px;
+                line-height: 1.17;
+                letter-spacing: 0.01em;
+                color: rgba(117, 117, 117, 0.5);
+            }
+        }
+    
+        &__chekbox {
+            padding-bottom: 30px;
+            margin-left: 12px;
+        }
+    
+        &__checkbox-label {
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 1.71;
+            letter-spacing: 0.03em;
+            color: var(--text-second-color);
+            display: flex;
+            align-items: center;
+        }
+    
+    
+        &__check-span {
+            width: 16px;
+            height: 15px;
+            border: 2px solid #303030;
+            border-radius: 2px;
+            margin-right: 8px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+            transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+    
+        &__check-icon {
+            fill: transparent;
+            transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+        }
+    
+        &__checkbox-input:checked + .modal__checkbox-label .modal__check-span {
+            background-color: var(--accent-color);
+            border: none;
+    
+        }
+    
+        &__checkbox-input:checked + .modal__checkbox-label .modal__check-icon {
+            fill: var(--text-light);
+        }
+    
+        &__checkbox-text {
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 1.71;
+            letter-spacing: 0.03em;
+        }
+    
+        &__checkbox-link {
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 1.71;
+            letter-spacing: 0.03em;
+            text-decoration-line: underline;
+            color: var(--accent-color);
+        }
+    
+        &__sub {
+            font-family: 'Roboto';
+            font-style: normal;
+            font-weight: 700;
+            font-size: 16px;
+            line-height: 1.88;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            letter-spacing: 0.06em;
+            color: var(--text-light);
+            background-color: var(--accent-color);
+            margin-left: auto;
+            margin-right: auto;
+            min-width: 200px;
+            height: 50px;
+            box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+            border-radius: 4px;
+            border-width: 0;
+        }
+        
 }
+
 
 
 .is-hidden {
     visibility: hidden;
     opacity: 0;
     pointer-events: 0;
-}
-
-.form {
-    &__title {
-        font-weight: 700;
-        font-size: 20px;
-        line-height: 1.15;
-        text-align: center;
-        letter-spacing: 0.03em;
-        color: var(--text-dark);
-        margin-bottom: 12px;
-    }
-    &__lable {
-        font-weight: 400;
-        font-size: 12px;
-        line-height: 1.17;
-        letter-spacing: 0.01em;
-        color: var(--text-second-color);
-
-    }
-
-    &__field:not(:first-child) {
-        margin-top: 10px;
-    }
-
-    &__wrap {
-        position: relative;
-    }
-
-    &__icon {
-        position: absolute;
-        left: 12px;
-        top: 50%;
-        transform: translateY(-50%);
-        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
-
-    &__input {
-        width: 100%;
-        height: 40px;
-        border: 1px solid rgba(33, 33, 33, 0.2);
-        border-radius: 4px;
-        padding-left: 42px;
-        outline: transparent;
-        transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        margin-top: 4px;
-
-        &:focus {
-            border-color: var(--accent-color);
-        }
-
-        &:focus + .form__icon {
-            fill: var(--accent-color);
-        }
-    }
-    &__comment {
-        margin-top: 10px;
-        margin-bottom: 20px;
-    }
-
-    &__input-comment {
-        width: 100%;
-        height: 120px;
-        border: 1px solid rgba(33, 33, 33, 0.2);
-        border-radius: 4px;
-        resize: none;
-        padding: 16px 12px;
-        outline: transparent;
-        transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        margin-top: 4px;
-
-        &:focus {
-            border-color: var(--accent-color);
-        }
-
-        &::placeholder {
-            font-weight: 400;
-            font-size: 12px;
-            line-height: 1.17;
-            letter-spacing: 0.01em;
-            color: rgba(117, 117, 117, 0.5);
-        }
-    }
-    &__chekbox {
-        padding-bottom: 30px;
-        margin-left: 12px;
-    }
-
-    &__checkbox-label {
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 1.71;
-        letter-spacing: 0.03em;
-        color: var(--text-second-color);
-        display: flex;
-        align-items: center;
-    }
-
-
-    &__check-span {
-        width: 16px;
-        height: 15px;
-        border: 2px solid #303030;
-        border-radius: 2px;
-        margin-right: 8px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-        transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
-
-    &__check-icon {
-        fill: transparent;
-        transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    }
-
-    &__checkbox-input:checked + .form__checkbox-label .form__check-span {
-        background-color: var(--accent-color);
-        border: none;
-
-    }
-
-    &__checkbox-input:checked + .form__checkbox-label .form__check-icon {
-        fill: var(--text-light);
-    }
-
-    &__checkbox-text {
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 1.71;
-        letter-spacing: 0.03em;
-    }
-
-    &__checkbox-link {
-        font-weight: 400;
-        font-size: 14px;
-        line-height: 1.71;
-        letter-spacing: 0.03em;
-        text-decoration-line: underline;
-        color: var(--accent-color);
-    }
-
-    &__sub {
-        font-family: 'Roboto';
-        font-style: normal;
-        font-weight: 700;
-        font-size: 16px;
-        line-height: 1.88;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        letter-spacing: 0.06em;
-        color: var(--text-light);
-        background-color: var(--accent-color);
-        margin-left: auto;
-        margin-right: auto;
-        min-width: 200px;
-        height: 50px;
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-        border-radius: 4px;
-        border-width: 0;
-    }
-
 }
 
 
