--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -8,10 +8,13 @@
     max-width: 1600px;
     margin: 0 auto;
     padding: 200px 0;
-    .hero__text {
+    
+    &__text {
             font-weight: 900;
-            font-size: 44px;
-            line-height: 1.36;
+            // font-size: 44px;
+            font-size: 26px;
+            // line-height: 1.36;
+            line-height: 1.62;
             text-align: center;
             letter-spacing: 0.06em;
             text-transform: uppercase;
@@ -24,7 +27,7 @@
     
         }
 
-    .hero__btn {
+    &__btn {
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
