--- a/sass/layouts/_activity.scss
+++ b/sass/layouts/_activity.scss
@@ -1,4 +1,9 @@
 .activity {
+    display: none;
+    @include desktop {
+        display: block;
+    }
+
     padding-bottom: 94px;
    
     &__title {
