--- a/sass/layouts/_benefits.scss
+++ b/sass/layouts/_benefits.scss
@@ -1,7 +1,9 @@
 
 .benefits__list {
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 30px;
+    // justify-content: space-between;
 
     
         .benefits__item:nth-child(1)::before {
@@ -19,6 +21,17 @@
         .benefits__item:nth-child(4)::before {
             background-image: url(../images/astronaut.svg);
         }
+    .benefits__item {
+        width: 100%;
+        @include tablet {
+            width: calc((100% - 30px) / 2);
+        }
+        @include desktop {
+            width: calc((100% - 90px) / 4);
+        }
+
+
+    }
 
         .benefits__item::before {
                     display: block;
@@ -37,8 +50,12 @@
             line-height: 1.14;
             letter-spacing: 0.03em;
             text-transform: uppercase;
+            text-align: center;
             color: var(--text-dark);
             margin-bottom: 10px;
+            @include desktop {
+            text-align: start;               
+            }
     
         }
 
@@ -50,7 +67,7 @@
             color: var(--text-second-color);
             margin-left: auto;
             margin-right: auto;
-            max-width: 270px;
+            // max-width: 270px;
     
         }
 }
