--- a/sass/layouts/_portfolio-projects.scss
+++ b/sass/layouts/_portfolio-projects.scss
@@ -2,7 +2,7 @@
 .projects {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    // justify-content: space-between;
     gap: 30px;
 
     &__text {
