--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -13,7 +13,9 @@
         }
     &__list {
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 30px;
+    
     }
     &__item {
             box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
@@ -21,10 +23,14 @@
                 0px 2px 1px rgba(0, 0, 0, 0.2);
             border-radius: 0px 0px 4px 4px;
             background-color: var(--text-light);
+        @include tablet {
+            width: calc((100% - 30px) / 2);
         }
-    &__img {
-    margin-bottom: 30px;
-}
+            
+        @include desktop {
+            width: calc((100% - 90px) / 4);
+        }
+        }
 
     &__name {
     font-weight: 500;
@@ -34,6 +40,7 @@
     letter-spacing: 0.03em;
     color: var(--text-dark);
     margin-bottom: 10px;
+    margin-top: 30px;
 }
 
     &__position {
