--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -15,8 +15,15 @@
     align-items: center;
 
     &__list {
-        display: flex;
-        margin-left: 93px;
+        display: none;
+        @include tablet {
+            display: flex;
+            margin-left: 87px;
+        @include desktop {
+            margin-left: 93px;
+        }
+        }
+        
     }
 
     &__link {
@@ -48,11 +55,20 @@
 }
 
 .contacts {
-    display: flex;
-
-    &__item:not(:first-child) {
-        margin-left: 50px;
+    display: none;
+    @include tablet {
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+    } 
+    @include desktop {
+        flex-direction: row;
+        gap: 50px;
     }
+
+    // &__item:not(:first-child) {
+    //     margin-left: 50px;
+    // }
     &__link {
         display: flex;
         align-items: center;
@@ -80,3 +96,28 @@
         }      
 }
 
+.header__menu-btn {
+    line-height: 0;
+    border: none;
+    background-color: transparent;
+    padding: 0;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    fill: currentColor;
+    
+    &:hover,
+    &:focus {
+        color: var(--accent-color);
+            }
+        
+    
+    .header__menu-svg {
+            width: 40px;
+            height: 40px;
+            fill: currentColor;
+        }
+    @include tablet {
+        display: none;
+
+    
+    }
+}
