--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: column;
     gap: 60px;
-    align-items: baseline;
+    align-items: center;
         @include tablet {
             flex-direction: row;
             flex-wrap: wrap;
@@ -21,6 +21,8 @@
 
     &__main-item {
         text-align: center;
+
+        
         @include desktop {
             text-align: start;
         }
@@ -79,6 +81,7 @@ background-color: rgba(255, 255, 255, 0.1);
 .subscribe {
 display: inline-block;
 width: 100%;
+
 @include desktop {
     display: flex;
     gap: 12px;
@@ -131,5 +134,10 @@ width: 100%;
     }
 }
 
+@media screen and (max-width: 767px) {
+    .footer__main-item {
+    width: 100%;    
+}
+}
 
 
