--- a/css/main.css
+++ b/css/main.css
@@ -47,7 +47,7 @@ body {
   --text-second-color: #757575;
   --accent-color: #2196F3;
   --second-bgcolor: #2F303A;
-  --icon-color: #AFB1B8 ;
+  --icon-color: #AFB1B8;
 }
 
 .visually-hidden {
@@ -145,6 +145,12 @@ body {
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media screen and (max-width: 767px) {
+  .modal {
+    width: 100%;
+    min-height: 609px;
+  }
+}
 .modal__btn {
   width: 30px;
   height: 30px;
@@ -224,10 +230,10 @@ body {
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin-top: 4px;
 }
-.modal__input-comment:focus {
+.modal:focus {
   border-color: var(--accent-color);
 }
-.modal__input-comment::placeholder {
+.modal::placeholder {
   font-weight: 400;
   font-size: 12px;
   line-height: 1.17;
@@ -311,13 +317,66 @@ body {
   pointer-events: 0;
 }
 
+@media screen and (min-width: 320px) {
+  .modal {
+    top: 20px;
+    transform: translateX(-50%);
+  }
+  .modal__checkbox-text,
+.modal__checkbox-link {
+    font-size: 8px;
+    line-height: 1.71;
+  }
+}
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 450px;
+  }
+  .modal__checkbox-text,
+.modal__checkbox-link {
+    font-size: 12px;
+    line-height: 1.71;
+  }
+}
+@media screen and (min-width: 768px) {
+  .modal {
+    width: 450px;
+    min-height: 609px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    min-height: 581px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .modal__title {
+    margin-bottom: 1px;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.03em;
+  }
+}
+@media screen and (min-width: 320px) {
+  .modal__title {
+    margin-bottom: 16px;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.03em;
+  }
+}
 .mob-menu {
   position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
   height: 100vh;
-  padding: 32px;
+  padding: 40px 4px;
   background-color: var(--text-light);
   z-index: 999;
   opacity: 0;
@@ -327,6 +386,11 @@ body {
   overflow: auto;
   transform: translateX(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 480px) {
+  .mob-menu {
+    padding: 40px;
+  }
 }
 .mob-menu.is-open {
   transform: translateX(0);
@@ -350,22 +414,27 @@ body {
   background-color: transparent;
   padding: 0;
 }
+.mob-menu__close-btn:hover .mob-menu__close-svg, .mob-menu__close-btn:focus .mob-menu__close-svg {
+  fill: #2196F3;
+}
 .mob-menu__close-svg {
   width: 40px;
   height: 40px;
-  color: var(--text-dark);
-}
-.mob-menu:hover .mob-menu, .mob-menu:focus .mob-menu {
-  color: var(--accent-color);
+  fill: var(--text-dark);
 }
 .mob-menu__close-icon {
   fill: currentColor;
 }
 .mob-menu__nav-list {
-  margin-bottom: 302px;
+  margin-bottom: 202px;
   display: flex;
   gap: 32px;
   flex-direction: column;
+}
+@media screen and (min-width: 480px) {
+  .mob-menu__nav-list {
+    margin-bottom: 302px;
+  }
 }
 .mob-menu__nav-link {
   font-weight: 500;
@@ -378,7 +447,7 @@ body {
   fill: currentColor;
 }
 .mob-menu__nav-link:hover, .mob-menu__nav-link:focus {
-  color: var(--accent-color);
+  color: #2196F3;
 }
 .mob-menu__contact-list {
   display: flex;
@@ -394,7 +463,7 @@ body {
   color: #757575;
 }
 .mob-menu__contact-link:hover, .mob-menu__contact-link.focus {
-  color: var(--accent-color);
+  color: #2196F3;
 }
 .mob-menu__soc-list {
   display: flex;
@@ -415,7 +484,7 @@ body {
   font-size: 12px;
   line-height: 1.22;
   letter-spacing: 0.02em;
-  color: var(--accent-color);
+  color: #2196F3;
 }
 
 @media screen and (min-width: 768px) {
@@ -423,6 +492,22 @@ body {
     display: none;
   }
 }
+.mob-menu__close-btn {
+  line-height: 0;
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.mob-menu__close-btn:hover .mob-menu__close-svg, .mob-menu__close-btn:focus .mob-menu__close-svg {
+  fill: var(--accent-color);
+}
+
+.mob-menu__close-svg {
+  width: 40px;
+  height: 40px;
+}
+
 .header {
   height: 80px;
   border-bottom: 1px solid #ECECEC;
@@ -524,11 +609,11 @@ body {
   border: none;
   background-color: transparent;
   padding: 0;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   fill: currentColor;
 }
 .header__menu-btn:hover, .header__menu-btn:focus {
-  color: var(--accent-color);
+  fill: var(--accent-color);
 }
 .header__menu-btn .header__menu-svg {
   width: 40px;
