--- a/sass/components/_mob-menu.scss
+++ b/sass/components/_mob-menu.scss
@@ -4,7 +4,8 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  padding: 32px;
+
+  padding: 40px 4px;
   background-color: var(--text-light);
   z-index: 999;
 
@@ -17,6 +18,10 @@
   overflow: auto;
   transform: translateX(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @include mobile {
+      padding: 40px;
+  }
 
   &.is-open {
     transform: translateX(0);
@@ -41,30 +46,37 @@
        border: none;
        background-color: transparent;
        padding: 0;
+
+      &:hover .mob-menu__close-svg,
+        &:focus .mob-menu__close-svg  {
+          fill: #2196F3;
+      
+        }
      }
   
      &__close-svg {
        width: 40px;
        height: 40px;
-       color: var(--text-dark);
+       fill: var(--text-dark);
+        
      }
   
-       &:hover &,
-       &:focus & {
-         color: var(--accent-color);
-       
-     }
+      
   
      &__close-icon {
        fill: currentColor;
      }
   
      &__nav-list {
-       margin-bottom: 302px;
+       margin-bottom: 202px;
   
        display: flex;
        gap: 32px;
        flex-direction: column;
+
+      @include mobile {
+        margin-bottom: 302px;        }
+
      }
   
      &__nav-link {
@@ -80,7 +92,7 @@
   
        &:hover,
        &:focus {
-         color: var(--accent-color);
+         color: #2196F3;
        }
      }
   
@@ -102,7 +114,7 @@
   
      &__contact-link:hover,
      &__contact-link.focus {
-       color: var(--accent-color);
+       color: #2196F3;
      }
   
      &__soc-list {
@@ -129,7 +141,7 @@
        line-height: 1.22;
        letter-spacing: 0.02em;
   
-       color: var(--accent-color);
+       color: #2196F3;
      }
      }
   
@@ -140,4 +152,23 @@
        }
   
     }
+
+.mob-menu__close-btn {
+  line-height: 0;
+  border: none;
+  background-color: transparent;
+  padding: 0;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    &:hover .mob-menu__close-svg,
+    &:focus .mob-menu__close-svg {
+      fill: var(--accent-color);
+  
+    }
+}
+
+.mob-menu__close-svg {
+  width: 40px;
+  height: 40px;
+}
 
