--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -25,15 +25,38 @@
     transform: translate(-50%, -50%) scale(1);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
-    &__btn {
-    width: 30px;
-    height: 30px;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 50%;
-    position: absolute;
-    right: 8px;
-    top: 8px;
-    background-color: transparent;
+    
+
+    @media screen and (max-width: 767px) {
+                    // top: 50%;
+                    // left: 50%;
+                    // transform: translate(-50%, -50%) scale(1);
+    
+                    // padding-top: 40px;
+                    // padding-bottom: 40px;
+                    // padding-left: 40px;
+                    // padding-right: 40px;
+    
+                    width: 100%;
+                    min-height: 609px;
+    
+                    // background: #fffff;
+                    // box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+                    //     0px 2px 1px rgba(0, 0, 0, 0.2);
+                    // border-radius: 4px;
+    
+                    // transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+                
+            }
+                        &__btn {
+                            width: 30px;
+                            height: 30px;
+                            border: 1px solid rgba(0, 0, 0, 0.1);
+                            border-radius: 50%;
+                            position: absolute;
+                            right: 8px;
+                            top: 8px;
+                            background-color: transparent;
 
         &:focus .modal__svg {
             fill: var(--accent-color);
@@ -56,6 +79,8 @@
             letter-spacing: 0.03em;
             color: var(--text-dark);
             margin-bottom: 12px;
+
+            
         }
     
         &__lable {
@@ -117,6 +142,7 @@
             outline: transparent;
             transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
             margin-top: 4px;
+        }
     
             &:focus {
                 border-color: var(--accent-color);
@@ -129,7 +155,7 @@
                 letter-spacing: 0.01em;
                 color: rgba(117, 117, 117, 0.5);
             }
-        }
+        
     
         &__chekbox {
             padding-bottom: 30px;
@@ -223,4 +249,121 @@
 }
 
 
+// @media screen and(max-width:767px) {
+//     .modal {
+//         position: absolute;
+//         top: 50%;
+//         left: 50%;
+//         transform: translate(-50%, -50%) scale(1);
 
+//         padding-top: 40px;
+//         padding-bottom: 40px;
+//         padding-left: 40px;
+//         padding-right: 40px;
+
+//         width: 100%;
+//         min-height: 609px;
+
+//         background: #fffff;
+//         box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+//             0px 2px 1px rgba(0, 0, 0, 0.2);
+//         border-radius: 4px;
+
+//         transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+//     }
+// }
+
+@media screen and (min-width: 320px) {
+    .modal {
+        top: 20px;
+        transform: translateX(-50%);
+    }
+        .modal__checkbox-text, 
+        .modal__checkbox-link {
+            font-size: 8px;
+            line-height: 1.71;
+        }
+}
+
+@include mobile {
+    .modal {
+        width: 450px;
+    }
+        .modal__checkbox-text,
+        .modal__checkbox-link {
+            font-size: 12px;
+            line-height: 1.71;
+        }
+}
+
+@include tablet {
+    .modal {
+        // position: absolute;
+        // top: 50%;
+        // left: 50%;
+        // transform: translate(-50%, -50%) scale(1);
+
+        // padding-top: 40px;
+        // padding-bottom: 40px;
+        // padding-left: 40px;
+        // padding-right: 40px;
+
+        width: 450px;
+        min-height: 609px;
+
+        // background: #fffff;
+        // box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+        //     0px 2px 1px rgba(0, 0, 0, 0.2);
+        // border-radius: 4px;
+
+        // transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+}
+
+@include desktop {
+    .modal {
+        // position: absolute;
+        // top: 50%;
+        // left: 50%;
+        // transform: translate(-50%, -50%) scale(1);
+
+        // padding-top: 40px;
+        // padding-bottom: 40px;
+        // padding-left: 40px;
+        // padding-right: 40px;
+
+        width: 528px;
+        min-height: 581px;
+
+        // background: #fffff;
+        // box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+        //     0px 2px 1px rgba(0, 0, 0, 0.2);
+        // border-radius: 4px;
+
+        // transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    }
+}
+
+
+
+@media screen and (max-width: 767px) {
+    .modal__title {
+        margin-bottom: 1px;
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 1.15;
+        text-align: center;
+        letter-spacing: 0.03em;
+    }
+}
+
+@media screen and (min-width: 320px) {
+    .modal__title {
+    margin-bottom: 16px;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.03em;
+    }
+}
