--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -101,12 +101,12 @@
     border: none;
     background-color: transparent;
     padding: 0;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     fill: currentColor;
     
     &:hover,
     &:focus {
-        color: var(--accent-color);
+        fill: var(--accent-color);
             }
         
     
