--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -4,5 +4,5 @@
     --text-second-color: #757575;
     --accent-color: #2196F3;
     --second-bgcolor: #2F303A;
-    --icon-color: #AFB1B8
+    --icon-color: #AFB1B8;
 }
