--- a/sass/components/_mob-menu.scss
+++ b/sass/components/_mob-menu.scss
@@ -104,12 +104,18 @@
        margin-bottom: 64px;
      }
   
-     .mobile-menu__contact-link {
+     &__contact-link {
        font-weight: 500;
        font-size: 24px;
        line-height: 1.17;
        letter-spacing: 0.02em;
        color: #757575;
+      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+      &:hover,
+      &:focus {
+        color: #2196F3;
+  }
+
      }
   
      &__contact-link:hover,
@@ -159,16 +165,20 @@
   background-color: transparent;
   padding: 0;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color  250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    &:hover .mob-menu__close-svg,
-    &:focus .mob-menu__close-svg {
-      fill: var(--accent-color);
+    &:hover,
+    &:focus {
+      color: #2196F3 ;
   
     }
 }
 
-.mob-menu__close-svg {
-  width: 40px;
-  height: 40px;
-}
+  .mob-menu__close-svg {
+    width: 40px;
+    height: 40px;
+    fill: currentColor;
+   
+      }
+  
 
