--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -6,6 +6,7 @@
     top: 0;
     transition: opacity 250ms, visibility 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    overflow: scroll;
 
     &.is-hidden .modal {
             transform: translate(-50%, 50%) scale(0);
