--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -11,6 +11,7 @@
             flex-direction: row;
             flex-wrap: wrap;
             justify-content: space-around;
+            align-items: baseline;
         }
                 @include desktop {
                     flex-wrap: nowrap;
