--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -34,10 +34,13 @@
         color: var(--text-dark);
         position: relative;
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
         &:hover,
         &:focus {
             color: var(--accent-color);
         }
+        
+
         &.current::after {
             content: "";
             position: absolute;
@@ -110,14 +113,17 @@
             }
         
     
-    .header__menu-svg {
-            width: 40px;
-            height: 40px;
-            fill: currentColor;
-        }
+   
     @include tablet {
         display: none;
-
-    
     }
+}
+//  .header__menu-svg {
+//      width: 40px;
+//      height: 40px;
+//      fill: currentColor;
+//  }  
+
+.navigation__link.current {
+    color: var(--accent-color);
 }
